Fix crash after update

If we delay the cleanup of the QQmlEngine, it doesn't crash after
updating.

BUG: 457278